[project]
name = "test-learn-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=26.3.1",
    "celery>=5.6.2",
    "django>=6.0.3",
    "djangorestframework>=3.16.1",
    "flake8>=7.3.0",
    "gunicorn>=25.1.0",
    "isort>=8.0.1",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "peewee>=4.0.2",
    "psycopg2-binary>=2.9.11",
    "pytest>=9.0.2",
    "pytest-django>=4.12.0",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "scikit-learn>=1.8.0",
]
